<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IndexActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pause"
        android:title="@string/pause" />

    <item
        android:id="@+id/action_resume"
        android:enabled="false"
        android:title="@string/resume_recording" />

    <item
        android:id="@+id/save_to_txt"
        android:title="@string/save_to_txt"/>

    <item
        android:id="@+id/setting"
        android:title="@string/title_activity_settings" />

</menu>
